--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "postcss": "^8.4.16",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
+    "storybook-dark-mode": "^1.1.2",
     "tailwindcss": "^3.1.8",
     "webpack": "^5.74.0"
   }
