--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@storybook/preset-create-react-app": "^4.1.2",
     "@storybook/react": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
+    "@tailwindcss/typography": "^0.5.7",
     "autoprefixer": "^10.4.8",
     "babel-plugin-named-exports-order": "^0.0.2",
     "husky": "^8.0.1",
